Fixed margin for smaller screens in DEV user profile image so it doesn't overlap with focus state of href.

--- a/src/scss/components/_post.scss
+++ b/src/scss/components/_post.scss
@@ -144,6 +144,12 @@
       &__pic {
         width: 150px;
         height: 150px;
+        margin-bottom: 1rem;
+
+        @include media-query('md') {
+          margin-left: 1rem;
+          margin-bottom: none;
+        }
 
         & img {
           width: 150px;
